Sidebar options fixed. Options now are showing according to the users given profiles

--- a/public/partials/dashboard.html
+++ b/public/partials/dashboard.html
@@ -38,7 +38,7 @@
             <md-card md-theme="{{ 'default' }}" md-theme-watch ng-if="controller.showCoordinatorDashboard">
                 <md-card-title>
                     <md-card-title-text>
-                        <span class="md-headline">Tecnologias registradas sin asignar</span>
+                        <span class="md-headline">Últimas Tecnologias Registradas</span>
                     </md-card-title-text>
                 </md-card-title>
                 <md-card-content layout="row" layout-align="space-between">
