minor changes added

--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -14,7 +14,7 @@
             </div>
             <div class="col-md-6">
                 <div class="float-rigth">
-                    <md-menu class="float-right">
+                    <md-menu class="float-right" ng-show="userRoles.length > 1">
                         <md-button aria-label="menu" class="md-icon-button" ng-click="$mdMenu.open($event)">
                             <md-icon md-menu-origin md-svg-icon="img/icons/more.svg"></md-icon>
                         </md-button>
