Hide share technology option

--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -25,9 +25,9 @@
                             <md-menu-item ng-show="controller.showAssign">
                                 <md-button ng-click="controller.showAssignDialog()">Asignar a personal OTRI</md-button>
                             </md-menu-item>
-                            <md-menu-item>
+                            <!-- <md-menu-item>
                                 <md-button ng-click="controller.showShareDialog()">Compartir esta tecnología</md-button>
-                            </md-menu-item>
+                            </md-menu-item> -->
                         </md-menu-content>
                     </md-menu>
                     <!-- <md-button ng-repeat="status in controller.allowedStatus" class="md-raised md-primary float-right" aria-label="Guardar" ng-click="controller.changeStatus(status)" style="text-align:left">
