--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -57,6 +57,8 @@
                 </md-menu>
             </div> -->
         </div>
+
+
         <md-nav-bar md-selected-nav-item="controller.currentNavItem"
                     nav-bar-aria-label="navigation links">
             <md-nav-item ng-repeat="format in controller.formats" md-nav-click="goto(format.name)" name="{{format.name}}" ng-show="format.showTab">
@@ -64,6 +66,14 @@
             </md-nav-item>
         </md-nav-bar>
         
+
+        <!-- <md-tabs md-selected="controller.currentNavItem" md-border-bottom md-autoselect md-swipe-conten>
+            <md-tab ng-repeat="format in controller.formats" md-nav-click="goto(format.name)" name="{{format.name}}" ng-show="format.showTab">
+                {{format.name}}
+            </md-tab>
+        </md-tabs> -->
+
+
         <div class="ext-content">
             <form name="{{controller.formatObjects[controller.currentNavItem].formName}}">
                 <div ng-repeat="(groupKey, questionGroup) in controller.formatObjects[controller.currentNavItem].questionGroups">
@@ -298,8 +308,6 @@
                                                               ng-readonly="controller.formatObjects[controller.currentNavItem].readonly"
                                                               ng-required="question.required">
                                                     </md-chips>
-
-
                                                     <!-- <div ng-messages="answer[question.name].length == 0"> -->
                                                         <div ng-if="question.required && (answer[question.name].length == 0 || !answer[question.name])" class="md-input-message-animation" 
                                                         style="color: rgb(221,44,0); padding-top: 5px; font-size: 12px;
@@ -307,8 +315,6 @@
                                                             Se requiere de este campo para continuar.
                                                         </div>
                                                     <!-- </div> -->
-
-
                                                 </div>
                                             </div>
                                             <div ng-switch-when="number">
@@ -353,7 +359,36 @@
                         </md-button>
                     </div>
                 </div>
-                <!-- Botones -->
+                <!-- Fecha de de registro -->
+
+
+
+
+
+
+                <div class="formgroup" ng-if="controller.currentNavItem =='FNI' && controller.showRegistrationDate">
+                    <md-content class="layout-padding" style="margin-top: 25px; border-radius:10px">
+                        <md-input-container class="md-block col-md-6" flex-gt-sm style="margin-left: 13px; margin-top: 30px;">
+                            <div class="row" style="width: 100%">
+                                <label>Fecha de registro del formato</label>
+                                <md-datepicker name="{{question.name + groupKey}}"
+                                    ng-model="answer[question.name]"
+                                    ng-readonly="controller.formatObjects[controller.currentNavItem].readonly" 
+                                    ng-required=true
+                                    style="margin-top: 12px">
+                                </md-datepicker>
+                            </div>
+                        </md-input-container>
+                    </md-content>  
+                </div>
+
+
+
+
+
+
+
+                <!-- Botones de guardar cambios-->
                 <div style="text-align: center">
                     <md-button ng-show="controller.showCreate" class="md-raised md-primary float-right floatButton" aria-label="Guardar" type="submit" ng-click="controller.checker($eval(controller.formatObjects[controller.currentNavItem].formName).$valid) && $eval(controller.formatObjects[controller.currentNavItem].formName).$valid && controller.create()">
                          <md-icon md-svg-icon="img/icons/save.svg"></md-icon>Guardar y continuar
