Registrator profile creation (Update). Work in progress.

--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -207,7 +207,7 @@
                                                 </div>
                                             </div>
                                             <div ng-switch-when="date">
-                                                <md-input-container class="md-block" flex-gt-sm style="margin-left: 13px; margin-top: 30px;">
+                                                <md-input-container class="md-block" flex-gt-sm style="margin-top: 30px;">
                                                     <div class="row" style="width: 100%">
                                                         <label>{{question.tag}}</label>
                                                         <md-datepicker name="{{question.name + groupKey}}"
@@ -373,7 +373,7 @@
 
                 <div class="formgroup" ng-if="controller.currentNavItem =='FNI' && controller.showRegistrationDate">
                     <md-content class="layout-padding" style="margin-top: 25px; border-radius:10px">
-                        <md-input-container class="md-block col-md-6" flex-gt-sm style="margin-left: 13px; margin-top: 30px;">
+                        <md-input-container class="md-block col-md-6" flex-gt-sm style="margin-top: 30px;">
                             <div class="row" style="width: 100%">
                                 <label>Fecha de registro del formato</label>
                                 <md-datepicker name="{{question.name + groupKey}}"
