--- a/public/partials/technology-form.html
+++ b/public/partials/technology-form.html
@@ -155,7 +155,7 @@
                                                 <div class="alert alert-info" role="alert" ng-if="question.relatedText">{{question.relatedText}}</div>
                                                 <md-input-container class="md-block">
                                                     <md-checkbox ng-model="answer[question.name]"
-                                                            ng-readonly="controller.formatObjects[controller.currentNavItem].readonly" 
+                                                            ng-disabled="controller.formatObjects[controller.currentNavItem].readonly" 
                                                             ng-required="question.required" 
                                                             type="checkbox" name="{{question.name + groupKey}}">
                                                         <div ng-if="question.relatedText"> Acepto {{question.tag | lowercase}} </div> 
